--- a/app/globals.css
+++ b/app/globals.css
@@ -17,17 +17,13 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+ 
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.btn-book:hover{
+  box-shadow: -10px 10px  black;
+  transform: translateX(10px);
+  
+
 }
+
