--- a/app/globals.css
+++ b/app/globals.css
@@ -28,3 +28,7 @@ body {
   box-shadow: -10px 10px  black;
   transform: translateX(10px);
 }
+.doctorcard:hover{
+  box-shadow: 10px 10px 100px black;
+  transform: scale(1.03);
+}
